added exception and updated characters and their tests