@@ -1,18 +1,27 @@
 package it.polimi.ingsw.model.characters;
 
+import it.polimi.ingsw.exceptions.NoAvailableColorException;
+import it.polimi.ingsw.exceptions.OutOfBoundException;
 import it.polimi.ingsw.model.*;
 import it.polimi.ingsw.model.gameBoard.*;
 
 import java.util.ArrayList;
-import java.util.stream.Collectors;
 
 public class CharacterMover extends Character {
+
+    private static final int ISLAND_ID_MIN = 1;
+    private static final int ISLAND_ID_MAX = 12;
 
     CreatureColor fromColor;
     CreatureColor toColor;
     int islandID;
     CreatureColor colorToRemove;
 
+    /**
+     * Default constructor
+     * @param game game played
+     * @param characterID id of the character to create
+     */
     public CharacterMover(Game game, int characterID) {
         this.game = game;
         this.characterID = characterID;
@@ -22,35 +31,37 @@ public class CharacterMover extends Character {
         this.colorNoPoints = null;
         this.extraPoints = 0;
         this.towerCounter = true;
+        this.numberOfIterations = 0;
+        this.moreSteps = 0;
 
         CharacterID character = CharacterID.values()[characterID];
 
-        switch(character) {
-            case CHARACTER_ONE:
+        switch (character) {
+            case CHARACTER_ONE -> {
                 this.cost = 1;
                 this.numberOfStudents = 4;
                 this.toDoNow = 1;
-                break;
-            case CHARACTER_SEVEN:
+            }
+            case CHARACTER_SEVEN -> {
                 this.cost = 1;
                 this.numberOfStudents = 6;
                 this.toDoNow = 3;
-                break;
-            case CHARACTER_TEN:
+            }
+            case CHARACTER_TEN -> {
                 this.cost = 1;
                 this.numberOfStudents = 0;
                 this.toDoNow = 2;
-                break;
-            case CHARACTER_ELEVEN:
+            }
+            case CHARACTER_ELEVEN -> {
                 this.cost = 2;
                 this.numberOfStudents = 4;
                 this.toDoNow = 1;
-                break;
-            case CHARACTER_TWELVE:
+            }
+            case CHARACTER_TWELVE -> {
                 this.cost = 3;
                 this.numberOfStudents = 0;
                 this.toDoNow = 1;
-                break;
+            }
         }
     }
 
@@ -64,43 +75,53 @@ public class CharacterMover extends Character {
     }
 
 
+    /**
+     * Set the color of the student to move from the source
+     * @param fromColor color of the student to move
+     */
     public void setFromColor(CreatureColor fromColor) {
-        this.fromColor = fromColor;
+        this.fromColor = fromColor; //TODO: input
     }
 
+    /**
+     * Set the color of the student to move from the destination
+     * @param toColor color of the student to move
+     */
     public void setToColor(CreatureColor toColor) {
-        this.toColor = toColor;
+        this.toColor = toColor; //TODO: input
     }
 
+    /**
+     * Set the island ID of the island where to move the student
+     * @param islandID of the island where to move the student
+     */
     public void setIslandID(int islandID) {
-        this.islandID = islandID;
+        this.islandID = islandID; //TODO: input
+
     }
 
+    /**
+     * Set the color of the students to remove from the hall of all players.
+     * Up to three students per color can be removed.
+     * @param colorToRemove color of the students to remove
+     */
     public void setColorToRemove(CreatureColor colorToRemove) {
-        this.colorToRemove = colorToRemove;
+        this.colorToRemove = colorToRemove; //TODO: input
+
     }
 
 
     @Override
-    public void effect() {
+    public void effect() throws NoAvailableColorException, OutOfBoundException {
         CharacterID character = CharacterID.values()[this.characterID];
 
-        switch(character) {
-            case CHARACTER_ONE:
-                effect_one(fromColor, islandID);
-                break;
-            case CHARACTER_SEVEN:
-                effect_seven(fromColor, toColor);//TODO how to handle iteration? (till 3 students) -> command line 'end effect'
-                break;
-            case CHARACTER_TEN:
-                effect_ten(fromColor, toColor); //TODO how to handle iteration? (till 2 students) -> command line 'end effect'
-                break;
-            case CHARACTER_ELEVEN:
-                effect_eleven(fromColor);
-                break;
-            case CHARACTER_TWELVE:
-                effect_twelve(colorToRemove);
-                break;
+        //TODO: input
+        switch (character) {
+            case CHARACTER_ONE -> effect_one(fromColor, islandID);
+            case CHARACTER_SEVEN -> effect_seven(fromColor, toColor);
+            case CHARACTER_TEN -> effect_ten(fromColor, toColor);
+            case CHARACTER_ELEVEN -> effect_eleven(fromColor);
+            case CHARACTER_TWELVE -> effect_twelve(colorToRemove);
         }
     }
 
@@ -108,13 +129,21 @@ public class CharacterMover extends Character {
      * Pick the student from this card and move it to an island
      * @param studentColor color of the student on the card chosen
      * @param islandID island where to move the student
+     * @throws NoAvailableColorException when the color chosen is not on the card
+     * @throws OutOfBoundException when the island id chosen doesn't exist
      */
-    private void effect_one(CreatureColor studentColor, int islandID) {
-        if(this.getStudents().stream().map(Creature::getColor).collect(Collectors.toList()).contains(studentColor)) {
-            Island island = game.getIslandByID(islandID);
-            island.receiveStudent(studentColor);
-            students.remove(getStudentByColor(students, studentColor));
-            students.add(game.getBag().drawStudent());
+    private void effect_one(CreatureColor studentColor, int islandID) throws NoAvailableColorException, OutOfBoundException {
+        if(this.getStudents().stream().map(Creature::getColor).toList().contains(studentColor)) {
+            if(islandID >= ISLAND_ID_MIN && islandID <= ISLAND_ID_MAX) {
+                Island island = game.getIslandByID(islandID);
+                island.receiveStudent(studentColor);
+                students.remove(getStudentByColor(students, studentColor));
+                students.add(game.getBag().drawStudent());
+            } else {
+                throw new OutOfBoundException();
+            }
+        } else {
+            throw new NoAvailableColorException();
         }
     }
 
@@ -122,8 +151,9 @@ public class CharacterMover extends Character {
      * Swaps a student present on the card with a student present in the entrance to the player board
      * @param cardColor color of the student on the card
      * @param entranceColor color of the student in the player's entrance
+     * @throws NoAvailableColorException when the color chosen is not on the card or in player's entrance
      */
-    private void effect_seven(CreatureColor cardColor, CreatureColor entranceColor) {
+    private void effect_seven(CreatureColor cardColor, CreatureColor entranceColor) throws NoAvailableColorException {
         Board playerBoard = game.getCurrentPlayer().getBoard();
         Student studentEntrance = getStudentByColor(playerBoard.getEntrance().getStudents(), entranceColor);
         Student studentCard = getStudentByColor(students, cardColor);
@@ -134,6 +164,8 @@ public class CharacterMover extends Character {
 
             playerBoard.addStudentToEntrance(cardColor);
             students.add(studentEntrance);
+        } else {
+            throw new NoAvailableColorException();
         }
     }
 
@@ -143,8 +175,9 @@ public class CharacterMover extends Character {
      * with a student present in the entrance to the player board
      * @param hallColor color of the student in player's hall
      * @param entranceColor color of the student in player's entrance
+     * @throws NoAvailableColorException when the color chosen is not in player's hall or in player's entrance
      */
-    private void effect_ten(CreatureColor hallColor, CreatureColor entranceColor) {
+    private void effect_ten(CreatureColor hallColor, CreatureColor entranceColor) throws NoAvailableColorException {
         Board playerBoard = game.getCurrentPlayer().getBoard();
         Student studentEntrance = getStudentByColor(playerBoard.getEntrance().getStudents(), entranceColor);
 
@@ -154,14 +187,17 @@ public class CharacterMover extends Character {
 
             playerBoard.addStudentToEntrance(hallColor);
             playerBoard.addStudentToHall(entranceColor);
+        } else {
+            throw new NoAvailableColorException();
         }
     }
 
     /**
      * Take a student from this card e move it to player's hall
      * @param cardColor color of the student on the card chosen
+     * @throws NoAvailableColorException when the color chosen is not on the card
      */
-    private void effect_eleven(CreatureColor cardColor) {
+    private void effect_eleven(CreatureColor cardColor) throws NoAvailableColorException {
         Board boardPlayer = game.getCurrentPlayer().getBoard();
         Student cardStudent = getStudentByColor(students, cardColor);
 
@@ -169,6 +205,8 @@ public class CharacterMover extends Character {
             students.remove(cardStudent);
             boardPlayer.addStudentToHall(cardColor);
             students.add(game.getBag().drawStudent());
+        } else {
+            throw new NoAvailableColorException();
         }
     }
 
